src/objects/BNF_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Address_ETL_User_Id__c</fullName>
        <label>Address ETL User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BNF_Opportunity_Threshold__c</fullName>
        <description>BNF Opportunity Threshold</description>
        <label>BNF Opportunity Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BNF_Release__c</fullName>
        <label>BNF Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BNF_Submission_Template_ID__c</fullName>
        <label>BNF Submission Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_BNF_Surcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable BNF Surcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Billing_Schedule_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Billing Schedule validation</description>
        <inlineHelpText>Enable Billing Schedule validation</inlineHelpText>
        <label>Enable Billing Schedule Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Customer_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable_Customer_Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_IQVIA_BNF_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable IQVIA BNF Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Material_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable_Material_Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_PO_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable PO Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_RSchedule_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Revenue Schedule validation</description>
        <inlineHelpText>Enable Revenue Schedule validation</inlineHelpText>
        <label>Enable RSchedule Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_Products__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3776 - Put material type seperate with | (pipe) sign to exclude products from BNF/MIBNF</description>
        <label>Excluded Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIBNF_Submission_Template_ID__c</fullName>
        <label>MIBNF Submission Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Records__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6807 - No. of records required for display of pagination on BNF List on MI_BNF_View Page</description>
        <label>No Of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst_Exception_Email__c</fullName>
        <description>Revenue Analyst Exception will be sent to this Email</description>
        <label>Revenue Analyst Exception Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Instance_URL__c</fullName>
        <label>SFDC_Instance_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BNF_Settings</label>
</CustomObject>